tests/snapshots/examples_fixtures/aoc__2024__day05.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/day05.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2024/Day05Solver.flx:103:9
    |
103 |         fold(
    |         ^^^^

Hint:
  Define it first: let fold = ...;
== stdout ==
<not executed>
