tests/snapshots/examples_fixtures/aoc__2024__day05_part1_test.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/day05_part1_test.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Flow.FTest` to import.

  examples/aoc/2024/day05_part1_test.flx:1:1
  |
1 | import Flow.FTest as Test
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Flow.FTest.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Flow.FTest` under roots: //?/examples/aoc/2024, //?/src (imported from //?/examples/aoc/2024/day05_part1_test.flx).
== stdout ==
<not executed>
